src/content/docs/zh/sdk/react-native/v4/features/preinstalled.mdx
---
title: "发送预安装应用活动"
description: "配置推广活动，以从预安装应用发送信息。"
slug: "en/sdk/react-native/v4/features/preinstalled"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v5: "/en/sdk/react-native/features/preinstalled"
---
您可以通过 Adjust SDK 来记录用户设备上的预安装应用的活动，借此发送未通过推广活动下载应用的用户信息。

您的 config 对象包含一个 `boolean` `preinstallTrackingEnabled` 属性，该属性控制此功能。要启用预安装监测，请为 config 对象 `preinstallTrackingEnabled` 属性指定 `boolean` 值。

```jsx
const adjustConfig = new AdjustConfig(
   "{YourAppToken}",
   AdjustConfig.EnvironmentSandbox,
);

adjustConfig.setPreinstallTrackingEnabled(true);

Adjust.create(adjustConfig);
```

默认链接识别码\{\#default\-link\-token\}
--------------------------------------

通过设置默认链接识别码，您可以将所有预安装归因到预先定义的 Adjust 链接。Adjust 将所有信息记录在此识别码下，直至归因来源发生变化。设置方法：

1. [在 Campaign Lab 中创建一个新的推广活动链接](https://help.adjust.com/en/article/links)。

   ```text
   https://app.adjust.com/{token}
   ```

2. 复制该识别码，将其传送给 config 对象的 [`defaultTracker` 方法](/en/sdk/flutter/configuration#set-default-link-token)。

   ```jsx
   const adjustConfig = new AdjustConfig(
      "{YourAppToken}",
      AdjustConfig.EnvironmentSandbox,
   );
   
   adjustConfig.setDefaultTracker("{TrackerToken}");
   
   Adjust.create(adjustConfig);
   ```

3. 创建并运行应用。如果您启用了日志，就应该能在日志中看到如下信息

   ```text
   Default tracker: 'abc123'.
   ```

